remove rss feed in postbuild

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "build": "next build",
     "build:test": "NODE_ENV=test next build",
     "dev:test": "NODE_ENV=test next dev",
-    "postbuild": "npm run sitemap && npm run rss",
-    "rss": "npx tsx './src/core/blog/rss-feed.ts'",
+    "postbuild": "npm run sitemap",
     "sitemap": "next-sitemap",
     "start": "next start",
     "start:test": "NODE_ENV=test next start",
