--- a/.env.production.template
+++ b/.env.production.template
@@ -1,10 +1,10 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyClJ-crbogbKZXazmYB69ITLFSi50-YAi0
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=audioland-dub.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=audioland-dub.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=240464476937
+NEXT_PUBLIC_FIREBASE_APP_ID=1:240464476937:web:75b24d6764f71d78f9f1d8
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=audioland-dub.firebaseapp.com
 NEXT_PUBLIC_SITE_URL=
 NEXT_PUBLIC_APPCHECK_KEY=
 NEXT_PUBLIC_REQUIRE_EMAIL_VERIFICATION=false
