--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@sentry/tracing": "^7.74.0",
     "@tanstack/react-table": "^8.10.7",
     "clsx": "^2.0.0",
+    "core-js": "^3.33.0",
     "csrf": "^3.1.0",
     "cva": "npm:class-variance-authority@^0.7.0",
     "date-fns": "2.30.0",
