--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
   "tabWidth": 2,
-  "useTabs": false,
+  "useTabs": true,
   "semi": true,
   "arrowParens": "always",
   "parser": "typescript",
   "printWidth": 80,
-  "singleQuote": true
+  "singleQuote": false
 }
