--- a/package.json
+++ b/package.json
@@ -39,15 +39,18 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.7",
     "@sentry/node": "^7.74.0",
     "@sentry/react": "^7.74.0",
     "@sentry/tracing": "^7.74.0",
     "@tanstack/react-table": "^8.10.7",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "core-js": "^3.33.0",
     "csrf": "^3.1.0",
