--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.3.0",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.3",
