feat: scripts to deploy firestore & storage rules

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "firebase:emulators:export": "firebase emulators:export --project audioland-dub-dev ./firebase-seed",
     "firebase:functions:deploy:dev": "firebase deploy --only functions --project dev",
     "firebase:functions:deploy:prod": "firebase deploy --only functions",
+    "firebase:storage:rules:deploy:dev": "firebase deploy --only storage --project dev",
+    "firebase:storage:rules:deploy:prod": "firebase deploy --only storage",
+    "firebase:firestore:rules:deploy:dev": "firebase deploy --only firestore:rules --project dev",
+    "firebase:firestore:rules:deploy:prod": "firebase deploy --only firestore:rules",
     "cypress": "NODE_ENV=test cypress open",
     "cypress:headless": "NODE_ENV=test cypress run",
     "test": "firebase emulators:exec --project audioland-dub-dev --import ./firebase-seed \"sh ./scripts/test.sh\"",
