--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "next lint",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "healthcheck": "npm run lint && npm run typecheck",
-    "firebase:emulators:start": "firebase emulators:start --project audioland-dub-dev --import ./firebase-seed",
+    "firebase:emulators:start": "cd functions/ && tsc && cd ../ && firebase emulators:start --project audioland-dub-dev --import ./firebase-seed",
     "firebase:emulators:export": "firebase emulators:export --project audioland-dub-dev ./firebase-seed",
     "firebase:functions:deploy:dev": "firebase deploy --only functions --project dev",
     "firebase:functions:deploy:prod": "firebase deploy --only functions",
@@ -84,7 +84,8 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.0",
@@ -111,7 +112,12 @@
     "rehype-sanitize": "^6.0.0",
     "rehype-slug": "^6.0.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.25.4",
+    "firebase-functions-test": "^3.1.0"
   },
   "optionalDependencies": {
     "recharts": "^2.9.0"
