--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "feed": "^4.2.2",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.3.1",
     "flagsmith": "^3.20.0",
     "heroicons": "2.0.18",
     "i18next": "^23.5.1",
@@ -85,8 +86,7 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "firebase-functions": "^4.3.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.0",
@@ -96,11 +96,16 @@
     "@types/nodemailer": "^6.4.11",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "autoprefixer": "^10.4.16",
     "cypress": "13.3.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.51.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "13.5.4",
+    "eslint-plugin-import": "^2.25.4",
+    "firebase-functions-test": "^3.1.0",
     "firebase-tools": "^12.7.0",
     "gray-matter": "4.0.3",
     "next-sitemap": "^4.2.3",
@@ -113,12 +118,7 @@
     "rehype-sanitize": "^6.0.0",
     "rehype-slug": "^6.0.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0"
+    "typescript": "^5.2.2"
   },
   "optionalDependencies": {
     "recharts": "^2.9.0"
