--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "cva": "npm:class-variance-authority@^0.7.0",
     "date-fns": "2.30.0",
     "feed": "^4.2.2",
+    "file-saver": "^2.0.5",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.3.1",
@@ -91,6 +92,7 @@
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.0",
     "@next/bundle-analyzer": "13.5.4",
+    "@types/file-saver": "^2.0.6",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.4",
     "@types/nodemailer": "^6.4.11",
