--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,8 @@ jobs:
       with:
         node-version: 18
 
-    - name: Install dependencies
-      run: npm ci
+    - name: Install Firebase CLI
+      run: npm install -g firebase-tools@latest
 
     - name: Select Firebase project
       run: firebase use default
