--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install Firebase CLI
       run: npm install -g firebase-tools@latest
 
-    - name: Authenticate with Firebase
+    - name: Login to Firebase
       run: firebase login:ci --token "${{ secrets.FIREBASE_AUTH_TOKEN }}"
 
     - name: Deploy Firestore rules to Production
