--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,16 +4,11 @@ on:
   push:
     branches:
       - main
-  workflow_run:
-    workflows: ["🚀 Build", "Code Review GPT"]
-    types:
-      - completed
 
 jobs:
   all-is-okey:
     name: Deploy
     runs-on: "ubuntu-latest"
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
     - name: Cancel Previous Runs
       uses: styfle/cancel-workflow-action@0.11.0
@@ -30,10 +25,10 @@ jobs:
       run: npm install -g firebase-tools@latest
 
     - name: Deploy Firestore rules to Production
-      run: npm run firebase:firestore:rules:deploy:prod --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
+      run: firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
 
     - name: Deploy Storage rules to Production
-      run: npm run firebase:storage:rules:deploy:prod --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
+      run: firebase deploy --only storage --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
 
     - name: Deploy Functions to Production
-      run: npm run firebase:functions:deploy:prod --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
+      run: firebase deploy --only functions --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
