--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Install Firebase CLI
       run: npm install -g firebase-tools@latest
 
+    - name: Select Project for Deploy
+      run: firebase use default
+
     - name: Deploy Firestore rules to Production
       run: firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
 
