--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       run: npm install -g firebase-tools@latest
 
     - name: Select Project for Deploy
-      run: firebase use default
+      run: firebase use default --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
 
     - name: Deploy Firestore rules to Production
       run: firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
