--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         node-version: 18
 
+    - name: Install dependencies
+      run: npm ci
+
     - name: Install Firebase CLI
       run: npm install -g firebase-tools@latest
 
