--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "lint": "next lint",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "healthcheck": "npm run lint && npm run typecheck",
-    "firebase:emulators:start": "cd functions/ && tsc && cd ../ && firebase emulators:start --project audioland-dub-dev --import ./firebase-seed",
-    "firebase:emulators:export": "firebase emulators:export --project audioland-dub-dev ./firebase-seed",
+    "firebase:emulators:start": "cd functions/ && tsc && cd ../ && firebase emulators:start --project dev --import ./firebase-seed",
+    "firebase:emulators:export": "firebase emulators:export --project dev ./firebase-seed",
     "firebase:functions:deploy:dev": "firebase deploy --only functions --project dev",
     "firebase:functions:deploy:prod": "firebase deploy --only functions",
     "firebase:storage:rules:deploy:dev": "firebase deploy --only storage --project dev",
@@ -34,7 +34,7 @@
     "firebase:firestore:rules:deploy:prod": "firebase deploy --only firestore:rules",
     "cypress": "NODE_ENV=test cypress open",
     "cypress:headless": "NODE_ENV=test cypress run",
-    "test": "firebase emulators:exec --project audioland-dub-dev --import ./firebase-seed \"sh ./scripts/test.sh\"",
+    "test": "firebase emulators:exec --project dev --import ./firebase-seed \"sh ./scripts/test.sh\"",
     "stripe:listen:docker": "docker run --rm -it --name=stripe -v ~/.config/stripe:/root/.config/stripe stripe/stripe-cli:latest listen --forward-to http://host.docker.internal:3000/api/stripe/webhook",
     "stripe:listen:local": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
     "stripe:mock-server": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest",
