--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.3.1",
     "flagsmith": "^3.20.0",
+    "form-data": "^4.0.0",
     "heroicons": "2.0.18",
     "i18next": "^23.5.1",
+    "mailgun.js": "^9.3.0",
     "next": "13.5.5",
     "next-i18next": "^14.0.3",
     "nodemailer": "^6.9.6",
