fix: set prod project in firebase prod deploy

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "firebase:emulators:start": "cd functions/ && tsc && cd ../ && firebase emulators:start --project dev --import ./firebase-seed",
     "firebase:emulators:export": "firebase emulators:export --project dev ./firebase-seed",
     "firebase:functions:deploy:dev": "firebase deploy --only functions --project dev",
-    "firebase:functions:deploy:prod": "firebase deploy --only functions",
+    "firebase:functions:deploy:prod": "firebase deploy --only functions --project prod",
     "firebase:storage:rules:deploy:dev": "firebase deploy --only storage --project dev",
-    "firebase:storage:rules:deploy:prod": "firebase deploy --only storage",
+    "firebase:storage:rules:deploy:prod": "firebase deploy --only storage --project prod",
     "firebase:firestore:rules:deploy:dev": "firebase deploy --only firestore:rules --project dev",
-    "firebase:firestore:rules:deploy:prod": "firebase deploy --only firestore:rules",
+    "firebase:firestore:rules:deploy:prod": "firebase deploy --only firestore:rules --project prod",
     "cypress": "NODE_ENV=test cypress open",
     "cypress:headless": "NODE_ENV=test cypress run",
     "test": "firebase emulators:exec --project dev --import ./firebase-seed \"sh ./scripts/test.sh\"",
