--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,14 +27,14 @@ jobs:
     - name: Install Firebase CLI
       run: npm install -g firebase-tools@latest
 
-    - name: Select Project for Deploy
-      run: firebase use default --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
+    - name: Select DEV Project for Deploy
+      run: firebase use dev --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
 
-    - name: Deploy Firestore rules to Production
+    - name: Deploy Firestore rules to DEV Project
       run: firebase deploy --only firestore:rules --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
 
-    - name: Deploy Storage rules to Production
+    - name: Deploy Storage rules to DEV Project
       run: firebase deploy --only storage --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
 
-    - name: Deploy Functions to Production
+    - name: Deploy Functions to DEV Project
       run: firebase deploy --only functions --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
