--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "next lint",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "healthcheck": "npm run lint && npm run typecheck",
-    "firebase:emulators:start": "cd functions/ && tsc && cd ../ && firebase emulators:start --project dev --import ./firebase-seed",
+    "firebase:emulators:start": "cd ./functions/ && tsc && cd ../ && firebase emulators:start --project dev --import ./firebase-seed",
     "firebase:emulators:export": "firebase emulators:export --project dev ./firebase-seed",
     "firebase:functions:deploy:dev": "firebase deploy --only functions --project dev",
     "firebase:functions:deploy:prod": "firebase deploy --only functions --project prod",
@@ -67,7 +67,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.11.0",
-    "firebase-functions": "^4.3.1",
+    "firebase-functions": "^4.6.0",
     "flagsmith": "^3.20.0",
     "form-data": "^4.0.0",
     "heroicons": "2.0.18",
