--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "killports": "sh scripts/kill-ports.sh"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.3.8",
     "@heroicons/react": "^2.0.18",
     "@mdx-js/mdx": "^2.3.0",
     "@radix-ui/react-avatar": "^1.0.4",
