--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "form-data": "^4.0.0",
     "heroicons": "2.0.18",
     "i18next": "^23.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^9.3.0",
     "next": "13.5.5",
     "next-i18next": "^14.0.3",
