--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "title-case": "^4.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
