--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-i18next": "^13.3.0",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.3",
+    "resend": "^3.2.0",
     "sonner": "^1.0.3",
     "stripe": "^13.10.0",
     "swr": "^2.2.4",
